[package]
name = "lib-epub"
authors = ["KikkiZ <zhangyozh@foxmail.com>"]
description = "A library for reading epub files"
keywords = ["epub", "ebook"]
license = "MIT"

version = "0.0.2"
edition = "2024"
rust-version = "1.85"

[dependencies]
chrono = { version = "0.4.42", optional = true }
infer = { version = "0.19.0", optional = true }
log = "0.4.29"
quick-xml = "0.38.4"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
walkdir = { version = "2.5.0", optional = true }
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
flate2 = "1.1.5"
# kiss_xml = "1.0.2"

[features]
builder = ["chrono", "infer", "walkdir"]
