[package]
name = "lib-epub"
authors = ["KikkiZ <zhangyozh@foxmail.com>"]
description = "A Rust library for reading and manipulating EPUB files."
documentation = "https://docs.rs/lib-epub"
exclude = ["/test_case"]
keywords = ["epub", "ebook", "library"]
license = "MIT"
repository = "https://github.com/KikkiZ/lib-epub.git"

version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
chrono = { version = "0.4.43", optional = true }
infer = { version = "0.19.0", optional = true }
log = "0.4.29"
quick-xml = "0.39.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.18"
walkdir = { version = "2.5.0", optional = true }
zip = { version = "7.3.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
flate2 = "1.1.9"
# kiss_xml = "1.0.2"

[features]
builder = ["chrono", "infer", "walkdir"]
content_builder = ["builder"]

[package.metadata.docs.rs]
all-features = true
